--- a/src/assets/sass/_utilities.scss
+++ b/src/assets/sass/_utilities.scss
@@ -1,20 +1,12 @@
-.spacing-sm > * + * {
-	margin-top: 1.5rem;
-}
 .spacing > * + * {
-	margin-top: 2.5rem;
+    margin-top: var(--spacer, 2.5rem);
 }
-.spacing-lg > * + * {
-	margin-top: 3.5rem;
-}
-.spacing-xl > * + * {
-	margin-top: 5rem;
-}
+
 .container {
-	width: 90%;
-	max-width: 120rem;
-	margin: 0 auto;
-	@media only screen and(min-width:$v-6) {
-		width: 85%;
-	}
+    width: 90%;
+    max-width: 120rem;
+    margin: 0 auto;
+    @media only screen and(min-width:$v-6) {
+        width: 85%;
+    }
 }
